--- a/index.html
+++ b/index.html
@@ -1,11 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Сучасна перкарня</title>
 </head>
 <body>
-      hello, team two! How are you123?
-</body>
+    <header>
+        <nav>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
+        </a>
+           <ul>
+            <li><a href="#">Франшиза</a></li>
+            <li><a href="#">Наші традиції</a></li>
+            <li><a href="#">Формати</a></li>
+            <li><a href="#">Контакти</a></li>
+           </ul>
+        </nav>
+        <button type="button">Замовити дзвінок</button>
+    </header>
+    <main>
+        <section>
+            <h1>Сучасна перкарня</h1>
+        </section>
+        <section>
+            <ul>
+                <li>Великий попит на ринку</li>
+                <li>Доступні за бюджетом формати</li>
+                <li>Досвідчена управлінська команда</li>
+            </ul>
+            <h2>Новий формат традицій</h2>
+            <p>
+                <span>shop bakeru</span> - це перкарня,
+                 яка взяла все найкраще.
+            </p>
+            <p>
+                Ми працюємо я найвідоміші мережі - <span>5 хвилин і готово</span>.
+            </p>
+            <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться на батони із посмішкою">
+        </section>
+        <section>
+            <h2>Наші найкраші шеф-кухарі</h2>
+            <ul>
+                <li>
+                 <article>
+                   <h3>Настя</h3>
+                   <p>Привіт. я Настя!</p>
+                   <p>Вже 10 років, я вітлюю у життя цікаві та смачні ідеї.</p>
+                   <p>Я випічу для вас найсмачніші вироби!</p>
+                  </article>
+                </li>
+                <li>
+                  <article>
+                  <h3>Влад</h3>
+                  <p>Привіт, я Влад!</p>
+                  <p>Мій кондитерський стаж вже 10 років.</p>
+                  <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+                 </article>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Формати</h2>
+            <li>
+                <article>
+                    <h3 lang="en">Warlus</h3>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h3 lang="en">Horseshoe</h3>
+                </article>
+            </li>
+            <li>
+                <article>
+                    <h3 lang="en">Handlebar</h3>
+                </article>
+            </li>
+        </section>
+        <section>
+            <h2>Приєднуйся до мережі пекарень</h2>
+        </section>
+    </main>
+    <footer>
+        <nav>
+            <a href="#">
+               <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
+            </a>
+            <ul>
+                <li><a href="#">Франшиза</a></li>
+                <li><a href="#">Наші традиції</a></li>
+                <li><a href="#">Формати</a></li>
+                <li><a href="#">Контакти</a></li>
+            </ul>
+        </nav>
+        <address>
+            <ul>
+                <li><a href="tel:+380960000007">+38 (096) 000 00 07</a></li>
+                <li><a href="mailto:shopbakery@gmail.com" target="_blank">shopbakery@gmail.com</a></li>
+                <li><a href="https://maps.app.goo.gl/4jJMo3dhJYnmSr639" target="_blank">Україна, мю Київ, вул. Січових Стрільців 54</a></li>
+                <li>
+                    <a href="">
+                        <!-- facebook icon -->
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <!-- instagram icon -->
+                    </a>
+                </li>
+            </ul>
+            <a href="#" target="_blank">Політика конфіденційності</a>
+            <p>2022 Дані Захищені</p>
+        </address>
+    </footer>
+ </body>
 </html>
